修改购物车样式不居中，fjy大佬发现的，0.0

--- a/font/index.html
+++ b/font/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>vue-cli</title>
+    <style>	
+    .container {
+	    max-width: 1280px;
+	    margin: 0 auto;
+	    padding: 0 10px;
+	}
+    </style>
   </head>
   <body>
     <div id="app"></div>
